@@ -4,7 +4,8 @@
 package io.deephaven.parquet.base;
 
 import io.deephaven.parquet.base.util.Helpers;
-import io.deephaven.parquet.base.util.SeekableChannelsProvider;
+import io.deephaven.util.channel.SeekableChannelContext;
+import io.deephaven.util.channel.SeekableChannelsProvider;
 import org.apache.parquet.format.*;
 import org.apache.parquet.format.ColumnOrder;
 import org.apache.parquet.format.Type;
@@ -12,42 +13,59 @@ import org.apache.parquet.schema.*;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.net.URI;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.channels.SeekableByteChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
+import static io.deephaven.util.channel.SeekableChannelsProvider.convertToURI;
+
 /**
- * Top level accessor for a parquet file
+ * Top level accessor for a parquet file which can read both from a file path string or a CLI style file URI,
+ * ex."s3://bucket/key".
  */
 public class ParquetFileReader {
     private static final int FOOTER_LENGTH_SIZE = 4;
     private static final String MAGIC_STR = "PAR1";
     static final byte[] MAGIC = MAGIC_STR.getBytes(StandardCharsets.US_ASCII);
+    public static final String FILE_URI_SCHEME = "file";
 
     public final FileMetaData fileMetaData;
     private final SeekableChannelsProvider channelsProvider;
-    private final Path rootPath;
+
+    /**
+     * If reading a single parquet file, root URI is the URI of the file, else the parent directory for a metadata file
+     */
+    private final URI rootURI;
     private final MessageType type;
 
-    public ParquetFileReader(final String filePath, final SeekableChannelsProvider channelsProvider)
+    public ParquetFileReader(final String source, final SeekableChannelsProvider channelsProvider)
+            throws IOException {
+        this(convertToURI(source), channelsProvider);
+    }
+
+    public ParquetFileReader(final URI parquetFileURI, final SeekableChannelsProvider channelsProvider)
             throws IOException {
         this.channelsProvider = channelsProvider;
-        // Root path should be this file if a single file, else the parent directory for a metadata
-        // file
-        rootPath =
-                filePath.endsWith(".parquet") ? Paths.get(filePath) : Paths.get(filePath).getParent();
-
+        if (!parquetFileURI.getRawPath().endsWith(".parquet") && FILE_URI_SCHEME.equals(parquetFileURI.getScheme())) {
+            // Construct a new file URI for the parent directory
+            rootURI = Path.of(parquetFileURI).getParent().toUri();
+        } else {
+            // TODO(deephaven-core#5066): Add support for reading metadata files from non-file URIs
+            rootURI = parquetFileURI;
+        }
         final byte[] footer;
-        try (final SeekableByteChannel readChannel = channelsProvider.getReadChannel(filePath)) {
+        try (final SeekableChannelContext channelContext = channelsProvider.makeContext();
+                final SeekableByteChannel readChannel =
+                        channelsProvider.getReadChannel(channelContext, parquetFileURI)) {
             final long fileLen = readChannel.size();
             if (fileLen < MAGIC.length + FOOTER_LENGTH_SIZE + MAGIC.length) { // MAGIC + data + footer +
                 // footerIndex + MAGIC
                 throw new InvalidParquetFileException(
-                        filePath + " is not a Parquet file (too small length: " + fileLen + ")");
+                        parquetFileURI + " is not a Parquet file (too small length: " + fileLen + ")");
             }
 
             final long footerLengthIndex = fileLen - FOOTER_LENGTH_SIZE - MAGIC.length;
@@ -58,7 +76,7 @@ public class ParquetFileReader {
             Helpers.readBytes(readChannel, magic);
             if (!Arrays.equals(MAGIC, magic)) {
                 throw new InvalidParquetFileException(
-                        filePath + " is not a Parquet file. expected magic number at tail "
+                        parquetFileURI + " is not a Parquet file. expected magic number at tail "
                                 + Arrays.toString(MAGIC) + " but found " + Arrays.toString(magic));
             }
             final long footerIndex = footerLengthIndex - footerLength;
@@ -165,10 +183,7 @@ public class ParquetFileReader {
     private int readIntLittleEndian(SeekableByteChannel f) throws IOException {
         ByteBuffer tempBuf = ByteBuffer.allocate(Integer.BYTES);
         tempBuf.order(ByteOrder.LITTLE_ENDIAN);
-        int read = f.read(tempBuf);
-        if (read != 4) {
-            throw new IOException("Expected four bytes, only read " + read);
-        }
+        Helpers.readExact(f, tempBuf);
         tempBuf.flip();
         return tempBuf.getInt();
     }
@@ -182,7 +197,7 @@ public class ParquetFileReader {
         return new RowGroupReaderImpl(
                 fileMetaData.getRow_groups().get(groupNumber),
                 channelsProvider,
-                rootPath,
+                rootURI,
                 type,
                 getSchema(),
                 version);
